# picocom16

./: LICENSE  README.md
docs/guides/picocom16-breadboard/: Build-guide.md
docs/guides/picocom16-breadboard/Step-10-XLNK/: bustester_a.uf2  bustester_b.uf2
docs/guides/picocom16-breadboard/Step-11-Display/: test_gfx.uf2
docs/guides/picocom16-breadboard/Step-5-ALNK/: bustester_a.uf2  bustester_b.uf2
docs/guides/picocom16-breadboard/step-4-VLNK/: bustester_a.uf2  bustester_b.uf2
firmware/: apu.uf2  gfx_demo.uf2  input_demo.uf2  vdp1.uf2  vdp2.uf2
hw/picocom16_pcb/: fp-lib-table  picocom16_app.kicad_sch  picocom16_apu.kicad_sch  picocom16_dbg.kicad_sch  picocom16_io.kicad_sch  picocom16_pcb.kicad_pcb  picocom16_pcb.kicad_prl  picocom16_pcb.kicad_pro  picocom16_pcb.kicad_sch  picocom16_vdp1.kicad_sch  picocom16_vdp2.kicad_sch  picocom_dac.kicad_sch  sym-lib-table
hw/picocom16_protoboard/: fp-info-cache  fp-lib-table  picocom16_protoboard.kicad_pcb  picocom16_protoboard.kicad_prl  picocom16_protoboard.kicad_pro  picocom16_protoboard.kicad_sch
hw/picocom16_protoboard/lib/RP-Pico Libraries/: MCU_RaspberryPi_and_Boards.kicad_sym
hw/picocom16_protoboard/lib/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
sw/apu/: CMakeLists.txt  README.md  activate_uart.sh  apu.code-workspace  tusb_config.h
sw/apu/src/: apu.c  hid_app.c  hid_app.h  hw_config.c
sw/demos/gfx_demo/: gfx_demo-pc.code-workspace  gfx_test-pico.code-workspace
sw/demos/gfx_demo/assets/: assets.json  fonts.json  models.json  textures.json
sw/demos/gfx_demo/assets/fonts/: LICENSE
sw/demos/gfx_demo/assets/models/trex/: LICENSE.md
sw/demos/gfx_demo/projects/gfx_demo-pc/: CMakeLists.txt
sw/demos/gfx_demo/projects/gfx_demo-pc/scripts/: build.sh  makefile.ref
sw/demos/gfx_demo/projects/gfx_demo-pico/: CMakeLists.txt  pack.sh
sw/demos/gfx_demo/src/: CMakeLists.txt  complex_demos.c  custom_gfx.c  custom_gfx.h  demo.c  demo.h  main.c  simple_demos.c
sw/demos/gfx_demo/src/resources/: fonts.inl  models.inl  textures.inl
sw/demos/input_demo/: input_demo-pc.code-workspace  input_demo-pico.code-workspace
sw/demos/input_demo/assets/: assets.json  sounds.json  textures.json
sw/demos/input_demo/projects/input_demo-pc/: CMakeLists.txt
sw/demos/input_demo/projects/input_demo-pc/scripts/: assets.sh
sw/demos/input_demo/projects/input_demo-pico/: CMakeLists.txt  activate_uart.sh
sw/demos/input_demo/src/: CMakeLists.txt  main.c
sw/sdk/: CMakeLists.txt
sw/sdk/lib/components/apu_core/: apu_client.c  apu_client.h  apu_core.c  apu_core.h  audio_engine.c  audio_engine.h  minivorbis.c  minivorbis.h
sw/sdk/lib/components/apu_core/resources/: builtin_sounds.inl
sw/sdk/lib/components/flash_store/: flash_store.c  flash_store.h
sw/sdk/lib/components/mock_hardware/: callback_bus.c  callback_bus.h  mock_bus.c  mock_bus.h  mutex.c  mutex.h  pio.c  pio.h  queue.c  queue.h  stdio.c  stdio.h
sw/sdk/lib/components/testing/: bustest.c  bustest.h
sw/sdk/lib/components/vdp1_core/: scanline.c  scanline.h  vdp1_core.c  vdp1_core.h  vdp_client.c  vdp_client.h
sw/sdk/lib/components/vdp2_core/: vdp2_core.c  vdp2_core.h
sw/sdk/lib/gpu/: command_list.c  command_list.h  gpu.c  gpu.h  gpu_3d.c  gpu_3d_impl.cpp  gpu_cmd_impl.c  gpu_types.h
sw/sdk/lib/platform/native_sdl2/: native_sdl_platform.c  native_sdl_platform.h
sw/sdk/lib/platform/native_sdl2/storage/: native_sdl_storage_driver.c  native_sdl_storage_driver.h
sw/sdk/lib/platform/pico/apu/: hw_apu_types.h
sw/sdk/lib/platform/pico/boot/: boot.c  boot.h  hw_boot_types.h
sw/sdk/lib/platform/pico/bus/: bus.c  bus.h  bus_rx.pio  bus_testing.c  bus_testing.h  bus_tx.pio
sw/sdk/lib/platform/pico/hw/: picocom_hw.c  picocom_hw.h
sw/sdk/lib/platform/pico/input/: hw_hid_types.h
sw/sdk/lib/platform/pico/linker/: memmap_bootloader_rp2350.ld
sw/sdk/lib/platform/pico/vdp1/: hw_vdp1_types.h
sw/sdk/lib/platform/pico/vdp2/: hw_vdp2_types.h
sw/sdk/lib/platform/sdl2/: sdl_platform.c  sdl_platform.h
sw/sdk/lib/platform/sdl2/audio/: sdl_audio_driver.c  sdl_audio_driver.h  test_core_apu.c
sw/sdk/lib/platform/sdl2/display/: sdl_display_driver.c  sdl_display_driver.h  test_core_vdp1.c  test_core_vdp2.c
sw/sdk/lib/platform/sdl2/hw/: sdl_hw.c
sw/sdk/lib/platform/sdl2/input/: sdl_input_driver.c  sdl_input_driver.h
sw/sdk/lib/platform/sdl2/storage/: sdl_storage_driver.c  sdl_storage_driver.h
sw/sdk/src/picocom/: devkit.c  devkit.h  platform.h
sw/sdk/src/picocom/audio/: audio.c  audio.h
sw/sdk/src/picocom/display/: display.c  display.h  gfx.c  gfx.h
sw/sdk/src/picocom/input/: input.c  input.h
sw/sdk/src/picocom/storage/: storage.c  storage.h
sw/sdk/src/picocom/utils/: alloc.c  alloc.h  array.c  array.h  profiler.h  random.c  random.h
sw/sdk/tools/resource_packer/: model_converter.py  resource_packer.py
sw/sdk/tools/resource_packer/aseprite/: __init__.py
sw/vdp1/: CMakeLists.txt  README.md  vdp1.code-workspace
sw/vdp1/src/: vdp1.c
sw/vdp2/: CMakeLists.txt  README.md  profiler.h  vdp2.code-workspace
sw/vdp2/include/: common_dvi_pin_configs.h
sw/vdp2/libdvi/: CMakeLists.txt  dvi.c
sw/vdp2/src/: display_driver.c  display_driver.h  profiler.h  vdp2.c
